Fix compile with jdk11
use java.nio.file as possible